# gitpilot

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  ENGINEERING_LOG.md  LICENSE  README.md  alembic.ini  docker-test.env  entrypoint.sh  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 20260715_01_create_operations_table.py
src/: __init__.py  __main__.py  api_app.py  api_db.py  api_models.py  api_schemas.py  api_service.py  auth.py  cli.py  client.py  commands.py  config.py  github_async.py  migrations.py  oauth.py  server.py
tests/: api_smoke_test.py  atomic_push.py  check_perms.py  diagnose.py  diagnose2.py  fake_github.py  live_demo.py  oauth_smoke_test.py  smoke_test.py  stateless_api_smoke_test.py
