[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitpilot"
version = "0.1.0"
description = "Gitpilot: FastAPI backend to drive GitHub via a GitHub App installation."
requires-python = ">=3.10"
readme = "ENGINEERING_LOG.md"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "httpx>=0.28.0",
    "SQLAlchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "PyJWT[crypto]>=2.8.0",
    "requests>=2.32.0",
]

[project.scripts]
github-api = "src.cli:main"
github-api-server = "src.server:main"
gitpilot = "src.cli:main"
gitpilot-server = "src.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
